fix dropdown navbar visibility
adjust z-index of other elements

--- a/override.css
+++ b/override.css
@@ -8,7 +8,7 @@ html {
     position:fixed; 
     top: 90px; 
     left: 10px; 
-    z-index: 999;
+    z-index: 990;
 }
 
 .navbar {
@@ -72,7 +72,7 @@ h2.box {
     width: 21vw;
     text-align: center;
     padding: 10px 0;
-    z-index: 1000;
+    z-index: 990;
     position: fixed;
     top: calc(130px + 10vh);
 }
@@ -134,7 +134,7 @@ main {
     position: absolute;
     top: calc(10vh + 32px);
     left: 70px;
-    z-index: 999;
+    z-index: 990;
 }
 
 .leaflet-control-zoom {
@@ -299,7 +299,6 @@ footer {
     #input-overlay {
         width: 70%;
         left: 15%;
-        z-index: 999;
     }
 
     #input-overlay .input-group {
